--- a/platformio.ini
+++ b/platformio.ini
@@ -395,6 +395,7 @@ extends       = common_stm32f1
 board         = genericSTM32F103VE
 extra_scripts = ${common.extra_scripts}
   buildroot/share/PlatformIO/scripts/mks_robin_mini.py
+  add_nanolib.py
 build_flags   = ${common_stm32f1.build_flags}
   -DMCU_STM32F103VE
 
